--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^4.1.0
   device_preview: ^1.2.0
   # share_plus: ^12.0.0
+  markdown_widget: ^2.3.2+8
   image_picker: ^1.2.0
   # shimmer: ^3.0.0
 
