--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,13 @@ dependencies:
   firebase_core: ^4.1.0
   device_preview: ^1.2.0
   # share_plus: ^12.0.0
-  markdown_widget: ^2.3.2+8
+  # markdown_widget: ^2.3.2+8
+  flutter_md: ^0.0.7
   image_picker: ^1.2.0
+  path_provider: ^2.0.15
+  media_store_plus: ^0.1.3
+  pdf: ^3.11.3
+  docx_template: ^0.4.0
   # shimmer: ^3.0.0
 
 dev_dependencies:
@@ -71,6 +76,8 @@ flutter:
     - assets/images/
     - assets/fonts/
     - assets/gif/
+    - assets/template.docx
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
