--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   media_store_plus: ^0.1.3
   pdf: ^3.11.3
   docx_template: ^0.4.0
+  google_mobile_ads: ^6.0.0
   # shimmer: ^3.0.0
 
 dev_dependencies:
